PCS BAckup 26Dec2023/Backup-Source/objects/Response_Time__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Customer_Reponse_Josh__c</fullName>
        <label>Avg Customer Reponse (Josh)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Customer_Reponse_Lisa__c</fullName>
        <label>Avg Customer Reponse (Lisa)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Customer_Response_Jennifer__c</fullName>
        <label>Avg Customer Response (Jennifer)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Customer_Response_Tricia__c</fullName>
        <label>Avg Customer Response (Tricia)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Customer_Response__c</fullName>
        <label>Avg Customer Response</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Internal_Approval__c</fullName>
        <label>Avg Internal Approval</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Internal_Response_Jennifer__c</fullName>
        <label>Avg Internal Response (Jennifer)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Internal_Response_Josh__c</fullName>
        <label>Avg Internal Response (Josh)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Internal_Response_Lisa__c</fullName>
        <label>Avg Internal Response (Lisa)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Internal_Response_Tricia__c</fullName>
        <label>Avg Internal Response (Tricia)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benchmark_1__c</fullName>
        <label>Benchmark-1</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benchmark_2__c</fullName>
        <label>Benchmark-2</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benchmark_3__c</fullName>
        <label>Benchmark-3</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Win_Rate_Jennifer__c</fullName>
        <label>Win Rate (Jennifer)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Rate_Josh__c</fullName>
        <label>Win Rate (Josh)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Rate_Lisa__c</fullName>
        <label>Win Rate (Lisa)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Rate_Tricia__c</fullName>
        <label>Win Rate (Tricia)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win_Rate__c</fullName>
        <label>Win Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Response Time</label>
    <nameField>
        <displayFormat>RT-{00}</displayFormat>
        <label>Response Time No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>